--- a/style.css
+++ b/style.css
@@ -66,10 +66,11 @@ margin-left: 24%;
     color: white;
     font-size: 1.2rem;
 }
-@media(max-width:600px){
+@media(max-width:700px){
     form{
-        width: 530px;
+        width: 70%;
         max-width: 100%;
+        padding-right: 10px;
     }
     .container{
         max-width: 100%;
