--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ border-radius: 5px;
 h1{
     text-align: center;
     padding-bottom: 3.5rem;
-    font-size: 1rem;
+    font-size: 2.5rem;
 }
 p{
     font-size: 1.5rem;
@@ -66,14 +66,16 @@ margin-left: 24%;
     color: white;
     font-size: 1.2rem;
 }
-@media(max-width:760px){
+@media(max-width:600px){
     form{
-    
+    width:100%;
         max-width: 100%;
-        padding-right: 40px;
+        /* padding-right: 40px; */
     }
     .container{
         max-width: 100%;
+
+        margin-left: 0PX;
     }
     textarea{
         width: 80%;
